# dsl_hate_speech

./: .gitignore  README.md  baseline.ipynb  baseline.py  copy_hg_model.sh  f1_commentators.py  few-shot.py  golds.py  load_llama.sh  load_models.py  load_models.sh  log-39764097.out  parse_llama.py  preprocess_dataset.py  pyproject.toml  requirements.txt  requirements_llama.txt  run.sh  run_agent.sh  run_ensemble.sh  run_few_shot.sh  run_llm.sh  run_llm_2g.sh  run_sweep.sh  setup_venv.sh  slurm-33873815.out  test_baseline.py  zero-shot.py
configs/: defaults.yaml
configs/hate_speech_unified/: defaults.yaml  sweep-models.yaml  sweep_final.yaml
configs/targeted/: defaults.yaml  sweep-models.yaml
configs/targets/: defaults.yaml
configs/toxicity/: defaults.yaml  sweep-bert.yaml  sweep-models-final.yaml  sweep-models.yaml
few_shot/res/: gender_predictions.txt
logs/: log-31249170.out  log-31249300.out  log-31249348.out  log-31249461.out  log-31249521.out  log-31249702.out
scripts/: data_analysis-checkpoint.ipynb  swiss_german_hackathon-checkpoint.ipynb  swiss_german_hackathon.ipynb  zero-shot.py
src/: few-shot.py  run_inference.py  test_script.py  train_binary_target_baseline.py  train_hate_speech.py  train_hate_speech_unified.py  train_target_group_baseline.py  train_targeted.py  train_targeted_baseline.py  train_targeted_roberta.py  train_toxicity.py  train_toxicity_baseline.py  train_toxicity_final.py  train_toxicity_final_eval.py  train_toxicity_gbert.py  train_toxicity_roberta.py
src/dsl/: dataset.py  datasets.py  llm.py  (+12 more)
utils/: create_lang_labels.py
(+5 files in other folders)
